fdo#87754: duplicated strings in an ItemList are not translated

Change-Id: I72c6e234ff999a6dbed48cc62fe7d39aeb798f35
(cherry picked from commit 1471103be04a1bcf18002b5ddc7c9c0744655b2b)
Reviewed-on: https://gerrit.libreoffice.org/13682
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 06fac18f2379516fc4902d7a417951cb0ccd9e76)